--- a/about.html
+++ b/about.html
@@ -1309,5 +1309,9 @@
     });
   });
 </script>
+  <script type="module">
+    import { inject } from '@vercel/analytics';
+    inject();
+  </script>
 </body>
 </html>
