--- a/en/about.html
+++ b/en/about.html
@@ -1301,5 +1301,9 @@
     });
   });
 </script>
+  <script type="module">
+    import { inject } from '@vercel/analytics';
+    inject();
+  </script>
 </body>
 </html>
