--- a/about.html
+++ b/about.html
@@ -371,7 +371,7 @@
                 <h3 class="sub-heading arabic">حيث يلتقي الرقي بسكينة المكان</h3>
               </div>
               <div class="corpoorate-para-wrapper">
-                <p class="paragraph dark arabic">بُنيت ثقافتنا المؤسسية على قناعة راسخة بأن التميّز ليس مجرد نتيجة وإنما أسلوب حياة.فهي ثقافة تحول تجربة التطوير العقاري من مجرد إنشاءات إلى حالة من الطمأنينة حيث يسهم كل فرد من الفريق في بناء مساحات تُلهم وتبقى.</p>
+                <p class="paragraph dark arabic">بُنيت ثقافتنا المؤسسية على قناعة راسخة بأن التميّز ليس مجرد نتيجة وإنما أسلوب حياة. فهي ثقافة تحول تجربة التطوير العقاري من مجرد إنشاءات إلى حالة من الطمأنينة حيث يسهم كل فرد من الفريق في بناء مساحات تُلهم وتبقى.</p>
               </div>
             </div>
           </div>
@@ -401,7 +401,7 @@
               <div class="accordion-content---brix arabic">
                 <div class="faq-icon-wrapper arabic"><img loading="lazy" src="images/Masterful-precision-in-everything-we-do..png" alt=""></div>
                 <div class="faq-paragraph-wrapper arabic">
-                  <p class="accordion-paragraph---brix arabic">نؤمن تماماً أن بناء مشاريع متميزة يتطلب اهتمامًا دقيقًا بالجودة في جميع مراحل التطوير.   نعتز بثقافتنا التي تُقدر الدقة والاتقان من أول المفهوم التصميمي الأول وحتى لحظة التسليم، لنضمن أن كل تفصيلة تعكس التزامنا العميق بالتميّز.</p>
+                  <p class="accordion-paragraph---brix arabic">نؤمن تماماً أن بناء مشاريع متميزة يتطلب اهتمامًا دقيقًا بالجودة في جميع مراحل التطوير. نعتز بثقافتنا التي تُقدر الدقة والإتقان من المفهوم التصميمي الأول وحتى لحظة التسليم، لنضمن أن كل تفصيلة تعكس التزامنا العميق بالتميّز.</p>
                 </div>
               </div>
             </div>
@@ -418,7 +418,7 @@
               </div>
               <div class="accordion-content---brix arabic">
                 <div class="faq-paragraph-wrapper arabic">
-                  <p class="accordion-paragraph---brix arabic">ثقافتنا تضع تجربة العميل في المقام الأول وتُعلي من شأنتقديم حلول مصممة خصيصًا لتلبية احتياجاته. نحن لا نبني علاقات طويلة الأمد مععملائنا فحسب بل نعزز روح التعاونوالاحترام المتبادل داخل فريقنا، مما يخلق بيئة عمل ملهمة تقود تجاه نتائجاستثنائية.</p>
+                  <p class="accordion-paragraph---brix arabic">ثقافتنا تضع تجربة العميل في المقام الأول وتُعلي من شأن تقديم حلول مصممة خصيصًا لتلبية احتياجاته. نحن لا نبني علاقات طويلة الأمد مع عملائنا فحسب بل نعزز روح التعاون والاحترام المتبادل داخل فريقنا، مما يخلق بيئة عمل ملهمة تقود تجاه نتائج استثنائية.</p>
                 </div>
                 <div class="faq-icon-wrapper arabic"><img loading="lazy" src="images/Exceptional-experiences-lasting-relationships..png" alt=""></div>
               </div>
@@ -436,7 +436,7 @@
               </div>
               <div class="accordion-content---brix arabic">
                 <div class="faq-paragraph-wrapper arabic">
-                  <p class="accordion-paragraph---brix arabic">الوعي البيئي والانسجام مع رؤية 2030 أولوية أولي  في سياسات المؤسسة بالإضافة إلى اعتبارهم قيم ثقافية راسخة توجه قراراتنا اليومية. نحن ملتزمون بتقديم حلول مستدامة تصمد أمام تحديات المستقبل، وتبني ممارسات مسؤولة تعود بالنفع على مجتمعاتنا.</p>
+                  <p class="accordion-paragraph---brix arabic">الوعي البيئي والانسجام مع رؤية 2030 أولوية أولى في سياسات المؤسسة بالإضافة إلى اعتبارهما قيم ثقافية راسخة توجه قراراتنا اليومية. نحن ملتزمون بتقديم حلول مستدامة تصمد أمام تحديات المستقبل، وتبني ممارسات مسؤولة تعود بالنفع على مجتمعاتنا.</p>
                 </div>
                 <div class="faq-icon-wrapper arabic"><img loading="lazy" src="images/Responsible-stewardship-for-future-generations..png" alt=""></div>
               </div>
@@ -472,7 +472,7 @@
               </div>
               <div class="accordion-content---brix arabic">
                 <div class="faq-paragraph-wrapper arabic">
-                  <p class="accordion-paragraph---brix arabic">ثقافتنا تقوم على اختيار المواقع الاستراتيجية وتحقيق الكفاءة التشغيلية من خلال التمييز القائم على البيانات. نحن نُعزز بيئة يلتقي فيها التفكير التحليلي مع الحلول الإبداعية، لضمان أن تكون كل قراراتنا ناتجة عن مزيج متوازن من البصيرة والحدس.</p>
+                  <p class="accordion-paragraph---brix arabic">ثقافتنا تقوم على اختيار المواقع الاستراتيجية وتحقيق الكفاءة التشغيلية من خلال التميز القائم على البيانات. نحن نُعزز بيئة يلتقي فيها التفكير التحليلي مع الحلول الإبداعية، لضمان أن تكون كل قراراتنا ناتجة عن مزيج متوازن من البصيرة والحدس.</p>
                 </div>
                 <div class="faq-icon-wrapper arabic"><img loading="lazy" src="images/Advanced-data-analysis-techniques..png" alt=""></div>
               </div>
@@ -536,7 +536,7 @@
                       <h4 class="sub-heading left arabic">رؤية قيادية</h4>
                     </div>
                     <div class="paragraph-wrapper">
-                      <p class="paragraph dark arabic">نبني مشاريع متميزة من خلال  العناية بالجودة في كل مرحلة من مراحل التطوير.</p>
+                      <p class="paragraph dark arabic">نبني مشاريع متميزة من خلال العناية بالجودة في كل مرحلة من مراحل التطوير.</p>
                     </div>
                   </div>
                 </div>
@@ -569,7 +569,7 @@
                       <h4 class="sub-heading left arabic">الرعاية المسؤولة</h4>
                     </div>
                     <div class="paragraph-wrapper">
-                      <p class="paragraph dark arabic">الالتزام بممارسات واعية بيئيًا وكفاءة استخدام الموارد، بما يتماشى مع أهداف رؤية 2030 البيئية.  رؤية 2030 .</p>
+                      <p class="paragraph dark arabic">الالتزام بممارسات واعية بيئيًا وكفاءة استخدام الموارد، بما يتماشى مع أهداف رؤية 2030 البيئية.</p>
                     </div>
                   </div>
                 </div>
@@ -586,7 +586,7 @@
             <h5 class="section-name dark arabic">المبادئ التوجيهية</h5>
           </div>
           <div class="center-align-heading-div">
-            <h2 class="section-heading center dark"> نُتقن التميز ونرسم ملامح المستقبل</h2>
+            <h2 class="section-heading center dark">نُتقن التميز ونرسم ملامح المستقبل</h2>
           </div>
         </div>
         <div id="w-node-_7d270595-d00c-bb8a-2e13-e7736f9176fd-d5928016" class="right-align-div">
@@ -601,11 +601,11 @@
                 </div>
                 <div class="paragraph-wrapper">
                   <ul role="list" class="paragraph list dark arabic w-list-unstyled">
-                    <li> حلول معمارية مبتكرة •</li>
-                    <li> إبداع مستوحى من الطبيعة •</li>
-                    <li> معايير جودة فائقة •</li>
-                    <li> نُقدم الدقة في كل تفصيلة تصميمية. •</li>
+                    <li>حلول معمارية مبتكرة</li>
+                    <li>إبداع مستوحى من الطبيعة</li>
+                    <li>معايير جودة فائقة</li>
                   </ul>
+                  <p class="paragraph dark arabic">نُقدم الدقة في كل تفصيلة تصميمية.</p>
                 </div>
               </div>
             </div>
@@ -629,11 +629,11 @@
                 </div>
                 <div class="paragraph-wrapper">
                   <ul role="list" class="paragraph list dark arabic w-list-unstyled">
-                    <li>إدارة مشاريع متقدمة  • </li>
-                    <li> دمج الابتكار الرقمي  • </li>
-                    <li> • رقابة جودة شاملة • </li>
-                    <li> نقود من خلال الابتكار التقني. •</li>
+                    <li>إدارة مشاريع متقدمة</li>
+                    <li>دمج الابتكار الرقمي</li>
+                    <li>رقابة جودة شاملة</li>
                   </ul>
+                  <p class="paragraph dark arabic">نقود من خلال الابتكار التقني.</p>
                 </div>
               </div>
             </div>
@@ -651,11 +651,11 @@
                 </div>
                 <div class="paragraph-wrapper">
                   <ul role="list" class="paragraph list dark arabic w-list-unstyled">
-                    <li> تجربة العملاء الاستثنائية  • </li>
-                    <li> تقديم حلول مصمّمة حسب الاحتياج  • </li>
-                    <li> بناء علاقات طويلة الأمد •</li>
-                    <li>نضع معيارًا جديدًا لخدمة العملاء • </li>
+                    <li>تجربة العملاء الاستثنائية</li>
+                    <li>تقديم حلول مصمّمة حسب الاحتياج</li>
+                    <li>بناء علاقات طويلة الأمد</li>
                   </ul>
+                  <p class="paragraph dark arabic">نضع معيارًا جديدًا لخدمة العملاء.</p>
                 </div>
               </div>
             </div>
@@ -675,16 +675,16 @@
                   <div class="guiding-wrapper arabic">
                     <div data-w-id="cedbb7b4-3b8f-8c8b-2e85-38112ae54e65" class="grid-icon"><img src="images/Rectangle-36.png" loading="lazy" alt="" class="image contain"></div>
                     <div class="grid-heading-wrapper">
-                      <h4 class="sub-heading arabic">الوعي البيئي</h4>
+                      <h4 class="sub-heading arabic">التنمية المستدامة</h4>
                     </div>
                   </div>
                   <div class="paragraph-wrapper">
                     <ul role="list" class="paragraph list dark arabic w-list-unstyled">
-                      <li> الوعي البيئي •</li>
-                      <li>انسجام مع رؤية 2030 • </li>
-                      <li> حلول مضمونة في المستقبل •</li>
-                      <li> إدارة الممارسات المستدامة •</li>
+                      <li>الوعي البيئي</li>
+                      <li>انسجام مع رؤية 2030</li>
+                      <li>حلول مضمونة في المستقبل</li>
                     </ul>
+                    <p class="paragraph dark arabic">إدارة الممارسات المستدامة</p>
                   </div>
                 </div>
               </div>
