--- a/typography.html
+++ b/typography.html
@@ -10,6 +10,7 @@
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/calma-website.webflow.css" rel="stylesheet" type="text/css">
+  <link href="css/touch-optimizations.css" rel="stylesheet" type="text/css">
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.jpg" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.jpg" rel="apple-touch-icon">  <script defer src="https://cdn.vercel-insights.com/v1/script.debug.js"></script>  <script type="module">   import { inject } from 'https://cdn.skypack.dev/@vercel/speed-insights';   inject();  </script>
